--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="WALLPAPER02" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WALLPAPER02.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lone-tree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lone-tree.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
