--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,13 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="WALLPAPER" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\WALLPAPER.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lone-tree" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lone-tree.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="WALLPAPER02" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WALLPAPER02.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="lone-tree" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lone-tree.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="WALLPAPER" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WALLPAPER.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="glowing-lines-human-heart-3d-shape-dark-background-generative-ai" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\glowing-lines-human-heart-3d-shape-dark-background-generative-ai.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
